# frontend-project-analysis

./: .env.example  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  Makefile  README.md  SKILL.md  alembic.ini  frontend-decomposition-methodology.md  pyproject.toml
agents/: openai.yaml
docs/: index.md
docs/features/: index.md
docs/pages/: index.md
docs/personas/: index.md
docs/relations/: feature-coverage-matrix.md  persona-story-page-matrix.md
docs/story-maps/: index.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_provider_audit_events.py  0003_provider_error_codes.py
references/: cli-contract.md  command-layer.md  document-map.md  downstream-commit-policy.md  evidence-gated-abstraction.md  glossary.md  infrastructure.md  methodology.md  quality-gates.md  release-checklist.md  repo-layers.md  schema-sketch.md  state-entrypoints.md  state-machine.md  structure.md  templates.md  test-matrix.md  validation-matrix.md  workflow.md
references/adr/: 0001-revision-aware-state-gates.md  0002-document-layering-and-rule-placement.md  0003-cross-cutting-analysis-and-brief-convergence.md  0004-host-review-fresh-context-isolation.md  0005-review-resubmit-and-import-first-reconciliation.md  0006-formal-and-explore-workflow-modes.md  0007-locale-tolerant-cross-reference-resolution.md  0008-llm-managed-submission-intent-routing.md  0009-evidence-gated-abstraction-control-layer.md  index.md  relationship-map.md
runbooks/: README.md  coverage-baseline.md  downstream-commit-flow.md  host-review-isolation.md  release-doc-audit.md  release-flow.md  release-llm-review.md  review-resubmit.md  shortcut-manual.md  test-matrix.md
scripts/: README.md  lint.sh  release-card.sh  release-llm-review.sh  release-preflight.sh  release-publish.sh  release.sh  test-all.sh  test-check.sh  test-coverage.sh  test-e2e-flow.sh  test-e2e-install.sh  test-e2e-reset.sh  test-e2e.sh  test-full.sh  test-smoke.sh
src/frontend_project_analysis/: __init__.py  artifact_commands.py  cli.py  command_utils.py  config.py  (+36 more)
tests/: cli_support.py  e2e_support.py  test_call_context.py  test_cli_brief_interview.py  test_cli_e2e.py  test_cli_import_flows.py  test_cli_project_db.py  test_cli_review_flows.py  test_cli_smoke.py  test_cli_submit.py  test_cli_workflow_gate.py  test_core_packets.py  test_downstream_commit_policy.py  test_facade_imports.py  test_llm_facades.py  test_llm_provider_utils.py  test_llm_router.py  test_llm_submission.py  test_packet_registry.py  test_relations_export.py  test_release_publish.py  test_release_review_prompt.py  test_submission_intent.py  test_submission_intent_prompt.py  test_workflow_state_dependencies.py  test_workflow_state_integrity.py  test_workflow_state_transitions.py  workflow_support.py
(+115 files in other folders)
