[project]
name = "frontend-project-analysis"
version = "1.3.0"
description = "Document-first frontend project analysis infrastructure with SQLite-backed workflow governance."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "alembic>=1.14,<2",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "pyyaml>=6.0.2,<7",
  "sqlalchemy>=2.0.41,<3",
  "typer>=0.16,<1",
]

[project.scripts]
fpa = "frontend_project_analysis.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.4,<9",
  "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frontend_project_analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "smoke: fast regression checks for CLI wiring and compatibility facades",
  "e2e: end-to-end regression coverage for install/init and workflow recovery",
  "e2e_install: E2E coverage for install and initialization behavior",
  "e2e_flow: E2E coverage for multi-round workflow failure recovery",
  "e2e_reset: E2E coverage for force reinitialization and state reset",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/frontend_project_analysis/core/__init__.py" = ["E501", "F401", "I001"]
"src/frontend_project_analysis/infrastructure/__init__.py" = ["E501", "F401", "I001"]
"src/frontend_project_analysis/models/__init__.py" = ["E501", "F401", "I001"]
"src/frontend_project_analysis/schemas/__init__.py" = ["E501", "F401", "I001"]
"src/frontend_project_analysis/workflow/io/__init__.py" = ["E501", "F401", "I001"]
"src/frontend_project_analysis/workflow/state/checks.py" = ["F401"]
"src/frontend_project_analysis/commands/review/__init__.py" = ["F401", "I001", "E402"]
